refactor controller test