@@ -1,19 +1,15 @@
 package com.udea.parcial.controller;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.ArgumentMatchers.eq;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import static org.mockito.Mockito.never;
@@ -27,25 +23,20 @@ import org.springframework.http.ResponseEntity;
 
 import com.udea.parcial.dto.InventoryRequest;
 import com.udea.parcial.dto.InventoryResponse;
-import com.udea.parcial.entity.Almacen;
-import com.udea.parcial.entity.Inventory;
-import com.udea.parcial.entity.Product;
-import com.udea.parcial.repository.AlmacenRepository;
-import com.udea.parcial.repository.InventoryRepository;
-import com.udea.parcial.repository.ProductRepository;
+import com.udea.parcial.service.InventoryService;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("Pruebas unitarias del controlador InventoryController")
 class InventoryControllerTest {
 
     @Mock
-    private InventoryRepository inventoryRepo;
+    private InventoryService inventoryService;
 
     @Mock
-    private ProductRepository productRepo;
+    private ApiVersionValidator versionValidator;
 
     @Mock
-    private AlmacenRepository almacenRepo;
+    private InventoryResponseAssembler responseAssembler;
 
     @InjectMocks
     private InventoryController controller;
@@ -56,6 +47,11 @@ class InventoryControllerTest {
         // Arrange
         String version = "v2";
         Long almacenId = 1L;
+        ResponseEntity<String> errorResponse = ResponseEntity
+                .status(HttpStatus.BAD_REQUEST)
+                .body("Unsupported API version");
+
+        when(versionValidator.validate(version)).thenReturn(Optional.of(errorResponse));
 
         // Act
         ResponseEntity<?> response = controller.getInventory(version, almacenId);
@@ -63,7 +59,8 @@ class InventoryControllerTest {
         // Assert
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         assertEquals("Unsupported API version", response.getBody());
-        verify(inventoryRepo, never()).findByAlmacenId(anyLong());
+        verify(inventoryService, never()).getInventoryByAlmacen(any());
+        verify(responseAssembler, never()).toInventoryModel(any(), any(), any());
     }
 
     @Test
@@ -73,22 +70,20 @@ class InventoryControllerTest {
         String version = "v1";
         Long almacenId = 1L;
 
-        Almacen almacen = new Almacen();
-        almacen.setId(almacenId);
-        almacen.setNombre("Almacen Central");
+        InventoryResponse dto1 = new InventoryResponse();
+        dto1.setInventoryId(100L);
+        dto1.setAlmacenId(1L);
+        dto1.setAlmacenNombre("Almacen Central");
 
-        Product product = new Product();
-        product.setId(10L);
-        product.setName("Teclado");
-        product.setDescription("Teclado mecanico");
-        product.setSku("TEC-001");
-        product.setPrice(new BigDecimal("250000.00"));
+        InventoryResponse dto2 = new InventoryResponse();
+        dto2.setInventoryId(101L);
+        dto2.setAlmacenId(1L);
+        dto2.setAlmacenNombre("Almacen Central");
 
-        Inventory inventory = new Inventory(almacen, product, 30);
-        inventory.setId(100L);
-        inventory.setLastUpdated(LocalDateTime.of(2024, 1, 10, 8, 30));
-
-        when(inventoryRepo.findByAlmacenId(almacenId)).thenReturn(Collections.singletonList(inventory));
+        when(versionValidator.validate(version)).thenReturn(Optional.empty());
+        when(inventoryService.getInventoryByAlmacen(almacenId)).thenReturn(List.of(dto1, dto2));
+        when(responseAssembler.toInventoryModel(any(InventoryResponse.class), eq(version), eq(almacenId)))
+                .thenAnswer(invocation -> EntityModel.of(invocation.getArgument(0)));
 
         // Act
         ResponseEntity<?> response = controller.getInventory(version, almacenId);
@@ -100,25 +95,12 @@ class InventoryControllerTest {
         @SuppressWarnings("unchecked")
         List<EntityModel<InventoryResponse>> body = (List<EntityModel<InventoryResponse>>) response.getBody();
 
-        assertEquals(1, body.size());
-        InventoryResponse dto = body.get(0).getContent();
+        assertEquals(2, body.size());
+        assertEquals(dto1, body.get(0).getContent());
+        assertEquals(dto2, body.get(1).getContent());
 
-        assertNotNull(dto);
-        assertEquals(100L, dto.getInventoryId());
-        assertEquals(1L, dto.getAlmacenId());
-        assertEquals("Almacen Central", dto.getAlmacenNombre());
-        assertEquals(10L, dto.getProductId());
-        assertEquals("Teclado", dto.getProductName());
-        assertEquals("Teclado mecanico", dto.getProductDescription());
-        assertEquals("TEC-001", dto.getSku());
-        assertEquals(new BigDecimal("250000.00"), dto.getPrice());
-        assertEquals(30, dto.getStock());
-        assertEquals(LocalDateTime.of(2024, 1, 10, 8, 30), dto.getLastUpdated());
-
-        assertTrue(body.get(0).getLink("self").isPresent());
-        assertTrue(body.get(0).getLink("almacen").isPresent());
-
-        verify(inventoryRepo, times(1)).findByAlmacenId(almacenId);
+        verify(inventoryService, times(1)).getInventoryByAlmacen(almacenId);
+        verify(responseAssembler, times(2)).toInventoryModel(any(InventoryResponse.class), eq(version), eq(almacenId));
     }
 
     @Test
@@ -127,6 +109,11 @@ class InventoryControllerTest {
         // Arrange
         String version = "v2";
         InventoryRequest request = new InventoryRequest();
+        ResponseEntity<String> errorResponse = ResponseEntity
+                .status(HttpStatus.BAD_REQUEST)
+                .body("Unsupported API version");
+
+        when(versionValidator.validate(version)).thenReturn(Optional.of(errorResponse));
 
         // Act
         ResponseEntity<?> response = controller.createInventory(version, request);
@@ -134,30 +121,8 @@ class InventoryControllerTest {
         // Assert
         assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
         assertEquals("Unsupported API version", response.getBody());
-        verify(almacenRepo, never()).findById(anyLong());
-        verify(productRepo, never()).save(any(Product.class));
-        verify(inventoryRepo, never()).save(any(Inventory.class));
-    }
-
-    @Test
-    @DisplayName("createInventory - Debe retornar 404 cuando el almacen no existe")
-    void testCreateInventory_AlmacenNotFound() {
-        // Arrange
-        String version = "v1";
-        InventoryRequest request = new InventoryRequest();
-        request.setAlmacenId(99L);
-
-        when(almacenRepo.findById(99L)).thenReturn(Optional.empty());
-
-        // Act
-        ResponseEntity<?> response = controller.createInventory(version, request);
-
-        // Assert
-        assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
-        assertEquals("El almacén no existe", response.getBody());
-        verify(almacenRepo, times(1)).findById(99L);
-        verify(productRepo, never()).save(any(Product.class));
-        verify(inventoryRepo, never()).save(any(Inventory.class));
+        verify(inventoryService, never()).createInventory(any(InventoryRequest.class));
+        verify(responseAssembler, never()).toCreatedInventoryModel(any(), any(), any());
     }
 
     @Test
@@ -170,24 +135,22 @@ class InventoryControllerTest {
         request.setProductName("Mouse");
         request.setProductDescription("Mouse inalambrico");
         request.setSku("MOU-001");
-        request.setPrice(new BigDecimal("120000.00"));
         request.setStock(12);
 
-        Almacen almacen = new Almacen();
-        almacen.setId(1L);
-        almacen.setNombre("Almacen Norte");
+        InventoryResponse serviceDto = new InventoryResponse();
+        serviceDto.setInventoryId(20L);
+        serviceDto.setAlmacenId(1L);
+        serviceDto.setAlmacenNombre("Almacen Norte");
+        serviceDto.setProductId(5L);
+        serviceDto.setProductName("Mouse");
+        serviceDto.setProductDescription("Mouse inalambrico");
+        serviceDto.setSku("MOU-001");
+        serviceDto.setStock(12);
 
-        when(almacenRepo.findById(1L)).thenReturn(Optional.of(almacen));
-        when(productRepo.save(any(Product.class))).thenAnswer(invocation -> {
-            Product saved = invocation.getArgument(0);
-            saved.setId(5L);
-            return saved;
-        });
-        when(inventoryRepo.save(any(Inventory.class))).thenAnswer(invocation -> {
-            Inventory saved = invocation.getArgument(0);
-            saved.setId(20L);
-            return saved;
-        });
+        when(versionValidator.validate(version)).thenReturn(Optional.empty());
+        when(inventoryService.createInventory(request)).thenReturn(serviceDto);
+        when(responseAssembler.toCreatedInventoryModel(serviceDto, version, request))
+            .thenReturn(EntityModel.of(serviceDto));
 
         // Act
         ResponseEntity<?> response = controller.createInventory(version, request);
@@ -208,15 +171,9 @@ class InventoryControllerTest {
         assertEquals("Mouse", dto.getProductName());
         assertEquals("Mouse inalambrico", dto.getProductDescription());
         assertEquals("MOU-001", dto.getSku());
-        assertEquals(new BigDecimal("120000.00"), dto.getPrice());
         assertEquals(12, dto.getStock());
-        assertNotNull(dto.getLastUpdated());
 
-        assertTrue(body.getLink("self").isPresent());
-        assertTrue(body.getLink("inventario_por_almacen").isPresent());
-
-        verify(almacenRepo, times(1)).findById(1L);
-        verify(productRepo, times(1)).save(any(Product.class));
-        verify(inventoryRepo, times(1)).save(any(Inventory.class));
+        verify(inventoryService, times(1)).createInventory(request);
+        verify(responseAssembler, times(1)).toCreatedInventoryModel(serviceDto, version, request);
     }
 }
